# nonebot_plugin_russian

./: README.md  pyproject.toml
russian/: __init__.py  config.py  data_source.py  util.py
俄语/: __init__.py
